--- a/app/Resources/views/category/edit.html.twig
+++ b/app/Resources/views/category/edit.html.twig
@@ -11,12 +11,12 @@
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs">{{ 'Назад'|trans }}</span>
+            <span class="hidden-xs">{{ 'return'|trans }}</span>
         </a>
     </div>
     <div class="list-group"></div>
     <div class="col-xs-12 col-md-offset-1 col-md-6">
-        <h2 style="margin: 2% 0 4% 0">{{ 'Редактирование категории'|trans }}</h2>
+        <h2 style="margin: 2% 0 4% 0">{{ 'category.edit'|trans }}</h2>
         {{ form_start(form, { 'attr': {
             'class': 'category'},
             'action': path('category_edit_id', { 'id': category.id }),
@@ -25,7 +25,7 @@
             <span id="categoryError"></span>
         </div>
         {{ form_widget(form) }}
-        <input type="button" value="{{ 'Сохранить'|trans }}" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
+        <input type="button" value="{{ 'save'|trans }}" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
