--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -46,24 +46,24 @@
                 <div class="item">
                     <img src="https://img1.goodfon.ru/original/2048x1152/0/4f/podarki-konfety-cvety-torty.jpg" alt="Los Angeles" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>{{ 'Лучшие подарки'|trans }}</h3>
-                        <p>{{ 'Дарите подарки по поводу и без'|trans }}</p>
+                        <h3>{{ 'first.name'|trans }}</h3>
+                        <p>{{ 'first.description'|trans }}</p>
                     </div>
                 </div>
 
                 <div class="item active">
                     <img src="http://www.zastavki.com/pictures/1366x768/2012/Food_Differring_meal_Bakery_and_Coffee_033408_.jpg" alt="Chicago" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>{{ 'Только свежая выпечка'|trans }}</h3>
-                        <p>{{ 'Выпечка из местных кулинарий'|trans }}</p>
+                        <h3>{{ 'second.name'|trans }}</h3>
+                        <p>{{ 'second.description'|trans }}</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="http://www.zastavki.com/pictures/1366x768/2014/Food___Cakes_and_Sweet_____Candy_on_sticks_090938_24.jpg" alt="New York" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>{{ 'Сладкое для настроения'|trans }}</h3>
-                        <p>{{ 'Радуйте себя и близких!'|trans }}</p>
+                        <h3>{{ 'third.name'|trans }}</h3>
+                        <p>{{ 'third.description'|trans }}</p>
                     </div>
                 </div>
             </div>
