--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -12,7 +12,7 @@
         </div>
     {% endfor %}
     <div class="col-xs-12 col-md-offset-1 col-md-10">
-        <h1> {{ 'Управление категориями'|trans }}
+        <h1> {{ 'navbar.contol_category'|trans }}
             {% if is_granted("ROLE_MODERATOR") %}
                 <a href="{{ path('create_category') }}" class="btn btn-default ">
                     <span class="glyphicon glyphicon-plus" style="color: #fff8e7"></span>
@@ -29,7 +29,7 @@
             itemsPerPage: [6, 12, 20],
             page: 1,
             view: 'table',
-            headers: ['#', '{{ 'Название категории'|trans }}', '{{ 'Родительская категория'|trans }}', '{{ 'Функции'|trans }}']
+            headers: ['#', '{{ 'category.name'|trans }}', '{{ 'category.parent'|trans }}', '{{ 'functions'|trans }}']
         });
     </script>
 {% endblock %}
