--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -27,9 +27,9 @@
     <div class="col-xs-12 col-md-9">
         <h1>
             {% if filter %}
-                {{ 'Поиск по'|trans }} "{{ filter }}"
+                {{ 'search_by'|trans }} "{{ filter }}"
             {% else %}
-                {{ 'Каталог товаров'|trans }}
+                {{ 'navbar.catalog_of_products'|trans }}
             {% endif %}
             {% if is_granted("ROLE_MODERATOR") %}
                 <a href="{{ path('product_create') }}" class="btn btn-default ">
