--- a/app/Resources/views/security/unauthorized.html.twig
+++ b/app/Resources/views/security/unauthorized.html.twig
@@ -1,2 +1,2 @@
-<button class="btn btn-default" data-toggle="modal" data-target="#loginModal">{{ 'Вход'|trans }}</button>
-<button class="btn btn-default" data-toggle="modal" data-target="#registrationModal">{{ 'Регистрация'|trans }}</button>
+<button class="btn btn-default" data-toggle="modal" data-target="#loginModal">{{ 'navbar.login'|trans }}</button>
+<button class="btn btn-default" data-toggle="modal" data-target="#registrationModal">{{ 'navbar.registration'|trans }}</button>
